# animeflv-fastapi

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/config/: __base_config.py  __init__.py
src/api/handlers/: __init__.py  animeflv-api.py  complete_example.py  connect.py  get_anime_info.py  get_anime_links.py  get_latest_animes.py  get_latest_episodes.py  get_real_video_url.py  scrapt_animeflv.py  search.py  search_anime.py
src/api/models/: animeflv.py
src/api/routes/: __init__.py  animeflv.py
src/api/services/: __init__.py  animeflv.py
src/api/utils/: __init__.py  exceptions.py  parse_table.py  process_anime_list.py  remove_prefix.py  warp_request.py  wrap_request.py
