[tool.poetry]
name = "animeflv-fastapi"
version = "0.1.0"
description = "animeflv-fastapi: FastAPI version of animeflv-api for animeflv.net"
authors = ["Fernando Corrales <fscpython@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
cloudscraper = "^1.2.71"
bs4 = "^0.0.2"
fastapi = {extras = ["standard"], version = "^0.115.11"}
certifi = "^2025.1.31"
requests = "^2.32.3"
urllib3 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
